test/compile_errors/stage1/obj/implicit_semicolon-if_expression.zig
export fn entry() void {
    _ = if(true) {};
    var good = {};
    _ = if(true) {}
    var bad = {};
}

// implicit semicolon - if expression
//
// tmp.zig:4:20: error: expected ';' after statement
